# cloack

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/actions/python-poetry-env/: action.yml
.github/workflows/: release.yml  test.yml
cloack/: __init__.py
tests/: test_truncate_dt.py
