# https://python-poetry.org/docs/pyproject/

[tool.poetry]
name = "cloack"
version = "0.0.1"
description = "A Python package to truncate dates and times."
authors = ["João Palmeiro <jm.palmeiro@campus.fct.unl.pt>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaopalmeiro/cloack"
# https://python-poetry.org/docs/pyproject/#classifiers
# https://github.com/python-poetry/poetry-core/blob/1.3.2/src/poetry/core/packages/package.py#L293
# https://github.com/python-poetry/poetry-core/blob/1.3.2/src/poetry/core/spdx/license.py#L6
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"

# https://python-poetry.org/docs/managing-dependencies/#dependency-groups
[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# isort . --show-config or poetry run isort . --show-config
[tool.isort]
profile = "black"
# https://pycqa.github.io/isort/docs/configuration/options.html#src-paths
src_paths = ["cloack", "tests"]

[tool.black]
target-version = ["py37", "py38", "py39", "py310"]
